2003-08-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_error.c (bk_error_irepeater_flush): #2033: eliminate possible
	recursion into non-reentrant error code

2003-08-14  Seth Robertson  <seth@stevedore.sysdetect.com>

	* src/timeout.c: Grrr.  How many years has this lurked?

2003-07-25  James Tanis  <jtt@stevedore.sysdetect.com>

	* lib/b_pollio.c, lib/b_ioh.c: error verbosity and valgrind integration

2003-07-16  Brian Larkins  <brian@stevedore.sysdetect.com>

	* include/libbk_inline.h: arguments to _ko_compare() are [key, obj],
	not [obj, key] otherwise it'd be called _ok_compare(). thanks to
	inlining, this was very annoying and hard to find.
	#1667 is busted on the joint.

2003-07-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (CALL_BACK): #1697: Handler can sometimes be NULL,
	so don't go dereferencing it...

2003-07-15  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): make struct timespec arg const

2003-07-12  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_exec): Add option for tossing stdout
	just like you could already toss stderr.

2003-07-10  James Tanis  <jtt@wonder.sysdetect.com>

	* include/libbk_inline.h (bk_dll_delete): Revamp delete.

2003-07-09  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ringbuf.c: Use liberal sprinkling of volatile to try and
	reduce potential compiler optimization reordering.

2003-07-09  James Tanis  <jtt@hawking.sysdetect.com>

	* include/libbk_inline.h (bk_dll_insert_internal): General insert
	routine which handles all insert cases.
	(bk_dll_insert_unique): "Front end" for unique inserts.
	(bk_dll_error_reason): Error reason.

2003-07-07  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* xml/b_search.c (bkxml_attrnode_data): Added string expansion option.

2003-07-02  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strconv.c (bk_string_atoflag): don't segfault for NULL names

2003-07-01  Seth Robertson  <seth@startide.sysdetect.com>