@@ -1,3 +1,8 @@
+2003-08-25  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* lib/b_ioh.c (ioh_internal_read): Move ioh_errno setting BEFORE
+	unlock activity, to preserve integrity of the errno.
+
 2003-08-25  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_error.c (bk_error_irepeater_flush): #2033: eliminate possible
